# thesis

./: .gitignore  README.md
00 org-roam/: adjoint-existence-hilbert.org  adjoint.org  approximate-eigenvectors.org  atkinsons-theorem.org  calkin-algebra.org  essential-range.org  essential-spectrum.org  fredholm-alternative.org  fredholm-toeplitz-equivalence.org  gelfand-theorem.org  hardy-space.org  kernel-cokernel.org  numerical-range.org  opeartor-types.org  operator-properties.org  point-spectrum.org  prior-and-posterior-methods.org  resolvent.org  riesz-lemma.org  ritz-method.org  spectral-pollution.org  spectral-theorem.org  spectrum-is-compact.org  spectrum-of-compact-normal.org  spectrum-of-compact.org  spectrum-of-multiplication.org  spectrum-of-toeplitz.org  spectrum.org  toeplitz-matrix-theorem.org  trace.org
10 Writing/: cutting-room-floor.txt
10 Writing/10.01 Fragments/: .#numerical-range.tex  bibliography.bib  essential-spectrum.tex  hartman-wintner.tex  numerical-range.tex  step-example.tex  truncation.tex
10 Writing/10.02 Notes/: 12.01-projection-range-counterexample.tex
10 Writing/10.03 Manuscript/: bibliography.bib  main.tex
10 Writing/10.03 Manuscript/sections/: detecting-pollution.tex  essential-spectrum.tex  introduction.tex  jacobi-matrices.tex  multiplication-operator.tex  notation.tex  pollution-bounds.tex
20 Papers/: Davies, E. B. - Spectral Enclosures and Complex Resonances for General Self-Adjoint Operators
20 Papers/20.01 Pollution/: Davies, E. B., Plum, M. - Spectral Pollution  Levitin, M., Shargorodsky, E. - Spectral Pollution and second-order relative spectra for self-adjoint operators
30 Code/: finite_difference.ipynb  sl-ritz-dbm.ipynb
30 Code/notebooks/: aceto-bdd-spec.pickle  aceto-bdd-spec_dbm.pickle  aceto-unbdd-nodbm.pickle  feinberg-zee.ipynb  hydrogen.ipynb  mult_ritz.ipynb  peri-potential.ipynb  residuals.ipynb  sors_ritz.ipynb  sturmliouville_dbms copy.ipynb  sturmliouville_dbms.ipynb  sturmliouville_ritz.ipynb  ten-martini.ipynb
30 Code/specpol/: README.md  mult_ritz.ipynb  pyproject.toml  requirements.txt  ritz.ipynb  schrodinger_spectra.ipynb
30 Code/specpol/notebooks/: mult_ritz.ipynb  prun0  ptb_ritz.ipynb  sturmliouville_ritz.ipynb  test.py
30 Code/specpol/src/specpol/: __about__.py  __init__.py  objects.py  operators.py  plot.py  ritz.py
30 Code/specpol/src/specpol/algebra/: operators.py
30 Code/specpol/src/specpol/common/: __init__.py  filon.py  laguerre.py  matrix.py
30 Code/specpol/src/specpol/ritz/: __init__.py  multiplication.py  ritz.py  sturmliouville.py
30 Code/specpol/tests/common/: test_filon.py  test_ritz.py
30 Code/truncated-aceto/: aceto-dbm.pickle
Code/: aceto.py  feinberg_zee.py  hydrogen.py  multiplication.py  numrange.py  perturbed_mult_dbm.py  ten_martini.py
Code/notebooks/: mult_ritz.ipynb  sturmliouville_dbms copy.ipynb  sturmliouville_dbms.ipynb  ten-martini.ipynb  wave-equation.ipynb
Code/truncated-aceto/: aceto-nodbm.pickle
Writing/: bibliography.bib  cleanjunk.sh  main.tex  presentation.tex
Writing/sections/: detecting-pollution.tex  introduction.tex  jacobi-matrices.tex  multiplication-operator.tex  pollution-bounds.tex
