[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "specpol"
dynamic = ["version"]
description = 'Module for analysing operator spectra and spectral pollution'
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "Alex H. Room", email = "alex.room@btinternet.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/alexhroom/specpol#readme"
Issues = "https://github.com/alexhroom/specpol/issues"
Source = "https://github.com/alexhroom/specpol"

[tool.hatch.version]
path = "src/specpol/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.7", "3.8", "3.9", "3.10", "3.11"]

[tool.hatch.envs.lint]
detached = true
dependencies = [
  "black>=23.1.0",
  "mypy>=1.0.0",
]
[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive {args:src/specpol tests}"
style = [
  "black --check --diff {args:.}",
]
fmt = [
  "black {args:.}",
  "style",
]
all = [
  "style",
  "typing",
]

[tool.black]
target-version = ["py37"]
line-length = 100
skip-string-normalization = true

[tool.coverage.run]
source_pkgs = ["specpol", "tests"]
branch = true
parallel = true
omit = [
  "src/specpol/__about__.py",
]

[tool.coverage.paths]
specpol = ["src/specpol", "*/specpol/src/specpol"]
tests = ["tests", "*/specpol/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
